src/assets/stylesheets/components/_header.scss
@import "./../rtl-support";

.header {
  width: 100%;
  background: $white;
  top: 0;
  @extend .box-shadow;
  z-index: 3;
  height: 160px;
  line-height: 1;

  .sub-header {
    background: $cool-gray;
    height: 80px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  .sub-header-title-and-description {
    display: flex;
    flex-direction: row;
  }

  .sub-header-title {
    max-width: 320px;
    height: auto;
    @include margin-left(20px);
    font-weight: 700;
    font-size: 24px;
    color: $white;
  }

  .sub-header-description {
    max-width: 500px;
    height: auto;
    @include margin-left(60px);
    font-weight: 400;
    font-size: 14px;
    color: $white;
  }

  .sub-header-map-legend {
    @include margin-right(20px);
  }

  .header-width {
    margin: 0 auto;
    padding: 0 20px;
  }

  .hd-element {
    padding: 15px 0px;
    display: inline-block;
    min-width: 140px;
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    box-sizing: border-box;
  }

  a {
    @extend .header-regular;
  }

  .hide {
    display: none;
  }
}

.header-elements {
  display: flex;
  width: 100%;
  justify-content: space-between;

  .left-aligned-headers {
    display: flex;
  }

  .logo-name {
    max-width: 190px;
    color: $logo-blue;
    text-transform: uppercase;
    letter-spacing: -0.1px;
    cursor: pointer;
    @extend .logo-font;
    @include margin-right(180px);
  }

  a {
    border-bottom: 4px solid transparent;
  }

  .router-link-exact-active {
    border-bottom: 4px solid $logo-blue;
    background: $selected-menu;
  }

  .language-selector {
    @extend .copy;
    height: 31px;
    color: $black;
    // background-color: $cool-gray;
    width: 100px;
    @include padding-left(5px);
    border: $table-border;
    -webkit-appearance: none;
    appearance: none;
    -moz-appearance: none;
  }
  .drop-down {
    @include margin-left(5px);
    min-width: 100px;
  }

  .drop-down:after {
    content: "\F078";
    font: normal normal normal 12px/1 FontAwesome;
    position: relative;
    pointer-events: none;
    width: 0;
    color: $black;
    @include right(20px);
  }
}

.header-elements__right {
  display: inline-flex;
  width: 15%;
}

@media print {
  .header {
    display: none;
  }
}

